# threadbare

./: Cargo.toml  README.md  flake.nix  todo.md
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/migrations/: initial_schema.sql
crates/core/src/: config.rs  error.rs  lib.rs
crates/core/src/db/: migrations.rs  mod.rs  schema.rs
crates/core/src/db/repositories/: account.rs  email.rs  folder.rs  mod.rs
crates/core/src/models/: account.rs  email.rs  folder.rs  mod.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  server.rs  state.rs  sync.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs  style.css
crates/gui/src/widgets/: email_list.rs  mod.rs  sidebar.rs
crates/gui/src/windows/: main_window.rs  mod.rs
