[workspace]
members = ["crates/daemon", "crates/gui", "crates/cli", "crates/core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jess jessforsterdev@gmail.com"]
license = "MIT"
repository = "https://github.com/gathddu/threadbare"

[workspace.dependencies]
# core
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
sqlite = "0.30"

# e-mail/IMAP
mail-parser = "0.9"

# async/concurrency
futures = "0.3"
parking_lot = "0.12"

# crypto
ring = "0.17"
sha2 = "0.10"

# IPC/networking
tonic = "0.12"
prost = "0.13"

# GUI (GTK4)
gtk4 = { version = "0.8", features = ["v4_14"] }
gtk4-macros = "0.8"
libadwaita = { version = "0.6", features = ["v1_5"] }
glib = "0.19"
gio = { version = "0.19", features = ["v2_76"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# utils
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"

