[package]
name = "threadbare-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { workspace = true }
mail-parser.workspace = true
ring.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
dirs.workspace = true

