[package]
name = "threadbare-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx = { workspace = true }
mail-parser.workspace = true
futures.workspace = true
parking_lot.workspace = true
ring.workspace = true
sha2.workspace = true
tonic = { workspace = true }
prost = { workspace = true }
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
lazy_static.workspace = true

