[package]
name = "threadbare-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gtk4 = { workspace = true }
gtk4-macros.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
uuid.workspace = true
chrono.workspace = true

[[bin]]
name = "threadbare-gui"
path = "src/bin/threadbare-gui.rs"
